--- a/style.css
+++ b/style.css
@@ -101,6 +101,11 @@
       .container {
         flex-direction: column;
         max-width: 320px;
-        margin: 0 auto;}
-    }
+        margin: 0 auto;
+      }
+      .service-area, .helpful-articles {
+        padding-left: 20px;
+        padding-right: 20px;
+  }
+}
   }
